Correct layout issue for course list on mobile screen.

--- a/Workspace/GetSkills/GetSkills/css/under500px.css
+++ b/Workspace/GetSkills/GetSkills/css/under500px.css
@@ -6,10 +6,6 @@ body {
 	color: #C2C2C2;
 }
 
-.table-course-category {
-	display: none;
-}
-
  .img-course-list-item {
 	 display: none;
  }
